# browsenextfile

./: MANIFEST.in  README.md  README.ru.md  setup.cfg  setup.py
src/browsenextfile/: nextfile.py
src/browsenextfile/nextfile_options/: nextfile_options.txt
src/browsenextfile/ui/: translations.py
src/browsenextfile/ui/i18n/: languages.py  nextfile.pot
src/browsenextfile/ui/i18n/data_dirs/: appdata.py
src/browsenextfile/ui/i18n/locale/ru/LC_MESSAGES/: nextfile.mo  nextfile.po
src/browsenextfile/ui/js/: check_user_input.js  close_dialog.js  dialog_setup.js  fill_about_window.js  fill_dialog_toolbar.js  fill_directory_window.js  options_page_setup.js  site_setup.js
src/browsenextfile/ui/js/css/: dialog_setup.css  site_setup.css
src/browsenextfile/ui/start/: nextfile.html
