[metadata]
name = browsenextfile
version = 0.0.5
author = Dmitry Shmygov
author_email = shmygov@rambler.ru
description = View local files (images or videos) using web browser
long_description =
    View local files (images or videos) using web browser.
    Change to next or previous file in the directory by mouse click.
    All image and video file formats supported by the browser can be opened.
    To install the program on Linux, open command line and type:
    python3 -m pip install --no-cache-dir browsenextfile
    To install the program on Windows, open command line or Windows PowerShell and type:
    py -m pip install --no-cache-dir browsenextfile
    During the installation, "NextFile" icon will be created on the Desktop.
    To run the program, double-click on this icon and wait for new browser window to open.
url = https://github.com/shmygov/browsenextfile
classifiers =
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3
    Programming Language :: JavaScript
    Environment :: Web Environment
    Topic :: Multimedia :: Graphics :: Viewers
    Topic :: Multimedia :: Video :: Display
keywords = image file viewer browser next previous selenium webdriver

[options]
package_dir =
    = src
packages = find:
install_requires =
    wheel
    pyshortcuts
    platformdirs
    importlib-resources
    selenium
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = src

